# r1cs-test

./: Cargo.toml  compile.sh
circom/: test_circuit.circom
circom/test_circuit_js/: test_circuit.wasm
src/: lib.rs
